cabal-version:      2.4
name:               minex
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Norbert Dzikowski
maintainer:         norbert@perun.network

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-ledger-constraints
                    , playground-common
                    , plutus-tx
                    , plutus-tx-plugin
    hs-source-dirs:   src
    default-language: Haskell2010
